<resources>
    <string name="app_name">7 Minutes Workout</string>
    <string name="image">workout logo</string>
    <string name="call_to_action" translatable="false">START</string>
    <string name="getReady">GET READY FOR...</string>
    <string name="timerPaused">RESUME</string>
    <string name="timerComplete">GO!!!</string>
    <string name="timerDone">DONE!!!</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE :</string>
    <string name="completeWorkout">Congratulations on finishing your workout!</string>
    <string name="back_to_main">Yes</string>
    <string name="stay_in_session">No</string>
    <string name="BMI">BMI</string>
    <string name="bmiCalculator">Calculator</string>
    <string name="weightHint">WEIGHT (in kg)</string>
    <string name="heightHint">HEIGHT (in cm)</string>
    <string name="history">History</string>
</resources>