<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_page_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/image"
        android:src="@drawable/img"
        app:layout_constraintBottom_toTopOf="@id/flStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/flStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/flBmi"
        android:background="@drawable/ripple_call_to_action">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_to_action"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/flBmi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        app:layout_constraintBottom_toTopOf="@id/bmiCalcText"
        android:background="@drawable/item_circular_color_accent_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BMI"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_gravity="center" />
    </FrameLayout>
    <TextView
        android:id="@+id/bmiCalcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiCalculator"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/flHistory"
        app:layout_constraintStart_toEndOf="@id/flBmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bmiCalcText"
        android:background="@drawable/item_circular_color_accent_background">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_calendar"
            android:contentDescription="@string/history"
            android:layout_gravity="center"/>
    </FrameLayout>
    <TextView
        android:id="@+id/historyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/flBmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>