<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExercise"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getReady"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/flProgressBar"
        />

    <FrameLayout
        android:id="@+id/flProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/call_to_action_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarExercise">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_bar_grey"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:max="10"
            android:progress="100"
            android:rotation="-90"/>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center">
            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                tools:text="10" />
        </LinearLayout>

    </FrameLayout>
    <TextView
        android:id="@+id/upcoming_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_exercise"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flProgressBar"
        app:layout_constraintBottom_toTopOf="@id/upcoming_exercise_name"
        />
    <TextView
        android:id="@+id/upcoming_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upcoming_exercise"
        />

    <ImageView
        android:id="@+id/ivExerciseImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        tools:src="@drawable/pushup_exercise"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvExerciseName"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercise"/>

    <TextView
        android:id="@+id/tvExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Exercise Name"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivExerciseImage" />
    <FrameLayout
        android:id="@+id/exerciseFl"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:background="@drawable/call_to_action_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExerciseName">
        <ProgressBar
            android:id="@+id/exerciseProgressBar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_bar_grey"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:indeterminate="false"
            android:progress="100"
            android:rotation="-90"/>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center">
            <TextView
                android:id="@+id/tvExerciseTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                tools:text="30" />
        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>